--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<h1 style="text-align: center">3 random videos</h1>
+<nav>
+<ul>
+<li><a href="https://acciojob.com/">Home</a></li>
+<li><a href="https://privacy.acciojob.com/">About us</a></li>
+<li><a href="https://acciojob.com/">Contact us</a></li>
+</ul>
+<video style="width: 500px" controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video>
+<video style="width: 500px" controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"></video>
+<video style="width: 500px" controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"></video>
+</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
